# python-project-52

./: Makefile  README.md  pyproject.toml
task_manager/: settings.py
templates/: index.html
